2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/mainwindow.c: Update website URL to point to the cairo wiki

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/import.c: Check TIGER filenames have the correct case

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/import_tiger.c: Use places instead of primary county subdivisions

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/location.c:
	* src/locationset.c: Remove (deprecated) GMemChunk

2007-09-08 Jeff Garrett <jeff@jgarrett.org>

	* src/main.c: Add configuration for external MySQL server
	* configure.ac:
	* src/db.c: Remove MySQL embedded server

2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/*: Fix all compiler warnings that showed up after adding -Wall.

2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c:
	* src/road.h: Remove hardcoded road suffix list.

2005-10-26  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c:
	* src/util.c:
	* data/road-suffix-list.txt: Moved list of road suffixes to data file.

2005-10-25  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Switch from gfreelist to g_new and g_free for the list of selected POI (currently not really used).
	* src/gfreelist.h:
	* src/gfreelist.c: Removed.

2005-10-20  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* roadster.spec: Added RPM .spec file contributed by Ofer Achler.
	* src/search_coordinate.c: Added file to allow pasting/typing text containing lat and lon coordinates into search box.  (Currently not implemented!)
	* src/search.c: Init and use search_coordinate stuff.
	* src/mainwindow.c: Disable hittesting related to tooltip for preview release.  Make GPS checkboxes insensitive when 'show position on map' is off.
	* src/db.c: Add db_city_get_name(id)
	* src/map_draw_cairo.c: Add miter limit.
	* src/mapinfowindow.c: Improve a lot.  May not make it into the preview release though.

2005-10-18  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mainwindow.c: