@@ -1,5 +1,15 @@
 2007-09-08 Jeff Garrett <jeff@jgarrett.org>
 
+	* src/downloadmanager.c:
+	* src/locationeditwindow.c:
+	* src/locationset.h:
+	* src/mainwindow.c:
+	* src/mapinfowindow.c:
+	* src/scenemanager.c:
+	* src/tooltipwindow.c: Do not use __unused as it may be reserved
+
+2007-09-08 Jeff Garrett <jeff@jgarrett.org>
+
 	* src/mainwindow.c: Update website URL to point to the cairo wiki
 
 2007-09-08 Jeff Garrett <jeff@jgarrett.org>
